tests/good/for_cicle.nx
// verificar se o ciclo `for` funciona

type r = 0 .. 5;

foreach i in r do {
    print(i);
}