tests/bad/for1.nx
// for itera apenas sobre um 

foreach i in 2 do {
    print(i)
}